--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,8 @@ path = "src/bin/update.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.26"
 csv = "1.2.2"
+json = "0.12.4"
 reqwest = "0.11.20"
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
