F: combine all bins

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,6 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
 
-[[bin]]
-name = "report"
-path = "src/bin/report.rs"
-
-[[bin]]
-name = "update"
-path = "src/bin/update.rs"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -19,4 +11,5 @@ chrono = "0.4.26"
 csv = "1.2.2"
 json = "0.12.4"
 reqwest = "0.11.20"
+structopt = "0.3.26"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
