--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
 [dependencies]
 chrono = "0.4.26"
 csv = "1.2.2"
-json = "0.12.4"
 reqwest = "0.11.20"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 structopt = "0.3.26"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
